# Aho-Corasick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TP_IA_01.ipynb
Aho_Corasick/: quicksort.hh
Aho_Corasick.xcodeproj/: project.pbxproj
Aho_Corasick.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Aho_Corasick.xcodeproj/project.xcworkspace/xcuserdata/jerome.xcuserdatad/: UserInterfaceState.xcuserstate
Aho_Corasick.xcodeproj/xcshareddata/xcschemes/: Aho_Coratchick.xcscheme
Aho_Corasick.xcodeproj/xcuserdata/jerome.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Aho_Corasick.xcodeproj/xcuserdata/jerome.xcuserdatad/xcschemes/: xcschememanagement.plist
Aho_Coratchick/: file_to_buffer.hh  lexico_node.hh  lexicographic_tree.hh  main.cpp  string.hh  vector.hh
Aho_Coratchick.xcodeproj/: project.pbxproj
Aho_Coratchick.xcodeproj/xcuserdata/jerome.xcuserdatad/xcschemes/: xcschememanagement.plist
Aho_Coratsick.xcodeproj/: project.pbxproj
Aho_Coratsick.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Aho_Coratsick.xcodeproj/xcshareddata/xcschemes/: Aho_Coratchick.xcscheme
src/: CMakeLists.txt  main.cpp
src/aho_corasick/: CMakeLists.txt  lexico_node.hh  lexicographic_tree.hh  quicksort.hh
src/aho_corasick/util/: display_tools.hh
src/bn_std/: find.hpp
src/util/: file_to_buffer.hh
test/: essai1  essai2
